--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -51,6 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/group_recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginLeft="15dp"
