--- a/app/src/main/res/layout/activity_group_member.xml
+++ b/app/src/main/res/layout/activity_group_member.xml
@@ -17,7 +17,7 @@
         app:srcCompat="@drawable/ic_account" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/activity_groupmember_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
