--- a/app/src/main/res/layout/fee_list_view.xml
+++ b/app/src/main/res/layout/fee_list_view.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fee_list_item_wrapper"
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
@@ -57,16 +58,17 @@
         android:text="0$"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/fee_list_item_status"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/fee_list_item_status"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
         android:layout_marginRight="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/member_fee_fee"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/member_fee_fee"
-        app:srcCompat="@android:drawable/presence_invisible" />
+        app:srcCompat="@android:drawable/ic_notification_overlay"
+        app:tint="@color/colorStatusRed" />
 </androidx.constraintlayout.widget.ConstraintLayout>
