--- a/app/src/main/res/layout/activity_add_fee.xml
+++ b/app/src/main/res/layout/activity_add_fee.xml
@@ -34,7 +34,7 @@
         android:layout_marginTop="25dp"
         android:ems="10"
         android:hint="Amount..."
-        android:inputType="number"
+        android:inputType="number|numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
