Add about page and adjusted dropdown

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,10 +7,6 @@
         app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/item2"
-        android:title="Dropdown"
-        app:showAsAction="never"/>
-
-    <item android:id="@+id/item3"
-        android:title="Dropdown"
+        android:title="About"
         app:showAsAction="never"/>
 </menu>
